--- a/final/local.tex
+++ b/final/local.tex
@@ -11,6 +11,9 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
+\newcommand{\equationname}{Equation}
+\newcommand{\theoremname}{Theorem}
+\newcommand{\corollaryname}{Corollary}
 \newcommand{\txtclr}[1]{\textcolor{#1}{#1}}  % colored text
 \newcommand{\mtxtclr}[1]{\text{\txtclr{#1}}}  % colored text in math mode
 \renewcommand{\a}{\alpha}
